small spacing fix

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,8 @@ ul {
 }
 
 li {
-    float: left;
+    margin-right:auto;
+    margin-left:auto;
    
 }
 
@@ -152,8 +153,7 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 30px;
-    margin-right: 30px;
-    margin-left: 30px;
+    
 }
 
 li a:hover {
